# react-template

./: DEVELOPMENT.md  LICENSE  README.md  biome.json  env.example  package.json  pnpm-lock.yaml  start.bat  start.sh  vite.config.ts
.cursor/rules/: tanstack-react-router_setup-and-architecture.mdc
apps/backend/: .gitignore  README.md  main.py  package.json  pyproject.toml
apps/frontend/: biome.json  index.html  package.json  tsconfig.json  vite.config.ts
apps/frontend/src/: i18n.ts
apps/frontend/src/components/common/: language-switch.tsx  mode-toggle.tsx
apps/frontend/src/components/ui/: button.tsx  dropdown-menu.tsx
apps/frontend/src/locales/en-US/: resources.json
apps/frontend/src/locales/zh-CN/: resources.json
apps/frontend/src/routes/: __root.tsx
src/: App.tsx  i18n.ts  main.tsx  routeTree.gen.ts
src/components/common/: language-switch.tsx
src/components/ui/: dropdown-menu.tsx
src/locales/en-US/: resources.json
src/locales/zh-CN/: resources.json
src/routes/: __root.tsx  index.tsx
